# jp_job_crawler

./: .env.example  README.md  config.yaml  main.py  pyproject.toml  schema.sql
.github/workflows/: crawl.yml
notifier/: discord.py
scrapers/: japan_dev.py  models.py  tokyo_dev.py
storage/: database.py
